# homepage

./: .typos.toml  LICENSE-MIT  README.md  config.toml  index.html  robots.txt  rss.xml  sitemap.xml
.github/workflows/: build-site.yml
collect-changes/: Cargo.toml
collect-changes/src/: main.rs
contact/: index.html
content/news/: 0000-01-01.md  _index.md
content/showcase/: _index.md  rusty-hermit.md
content/this-month/: 2020-04.md  2020-05.md  2020-06.md  2020-07.md  2020-08.md  2020-09.md  2020-10.md  _index.md
css/: main.css  poole.css
news/: index.html
news/0000-01-01/: index.html
showcase/: index.html
showcase/cluu/: index.html
showcase/hermit/: index.html
showcase/rusty-hermit/: index.html
static/: CNAME
static/css/: main.css  poole.css
static/uefi-book/: index.html
templates/: base.html  index.html  page.html  rss.xml  section.html  showcase.html  snippets.html
this-month/: index.html
this-month/2020-04/: index.html
this-month/2020-05/: index.html
this-month/2020-06/: index.html
this-month/2020-07/: index.html
this-month/2020-08/: index.html
this-month/2020-09/: index.html
this-month/2020-10/: index.html
this-month/2020-11/: index.html
this-month/2020-12/: index.html
this-month/2021-01/: index.html
this-month/2021-02/: index.html
this-month/2021-03/: index.html
this-month/2021-04/: index.html
this-month/2021-05/: index.html
this-month/2021-06/: index.html
this-month/2021-07/: index.html
this-month/2021-08/: index.html
this-month/2021-09/: index.html
this-month/2021-10/: index.html
(+136 files in other folders)
