[package]
name = "collect-changes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.21", default-features = false }
eyre = "0.6.8"
octocrab = { version = "0.18.1", default-features = false, features = [
    "rustls",
] }
tokio = { version = "1.20.4", features = ["full"] }
